--- a/src/main/webapp/WEB-INF/view/test.html
+++ b/src/main/webapp/WEB-INF/view/test.html
@@ -6,42 +6,71 @@
 <head>
     <title>Title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-<header>
-    <div class="bg-dark collapse show" id="navbarHeader" style="">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-9">
-                    <h4 class="text-white">О проекте</h4>
-                    <p class="text-muted">Сервис создан для поддержки типографий. Оборудование нередко выходит из строя.
-                        На этот случай есть мастера, готовые устранить проблему за короткий срок.
-                        Заполните заявку и ждите звонка от администратора. </p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <ul class="list-unstyled">
-                        <li><a href="/typograf_base_war/admin" class="text-white">Администратор</a></li>
-                        <li><a href="/typograf_base_war/engineer" class="text-white">Инженер</a></li>
-                        <li><a href="/typograf_base_war/logout" class="text-white">Выход</a></li>
-                    </ul>
-                </div>
+
+    <header>
+        <div class="bg-dark collapse show" id="navbarHeader" style="">
+            <div class="row col-md-12 justify-content-center pt-3 " align="center">
+                <p>
+                    <button class="btn btn-secondary " type="button" onclick="window.location.href='/'" >
+                        Main
+                    </button>
+                    <button class="btn btn-secondary" type="button" onclick="window.location.href='logout'" >
+                        LogOut
+                    </button>
+                </p>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 
-<div class="container">
-    <div class="row row-cols-2">
-        <div class="col-2"> a</div>
-        <div class="col-2">b</div>
-        <div class="col-2">c</div>
-        <div class="col-2">d</div>
-        <div class="col-2">f</div>
-        <div class="col-2">j</div>
-    </div>
-</div>
+
+    <table border="1" cellspacing="0" bgcolor="#fff8dc">
+        <tr align="left" valign="middle" bgcolor="#add8e6">
+            <th>Фирма</th>
+            <th>Имя</th>
+            <th>Дата визита</th>
+            <th>Старт работы</th>
+            <th>Время работы</th>
+        </tr>
+
+        <%--Выводим расипсание сотрудника--%>
+        <c:forEach var="listTabel" items="${listWork}">
+            <tr align="left">
+                <td>${listTabel.idClientRequest.firm}</td>
+                <td>${listTabel.idEmployee.name}</td>
+                <td>${listTabel.dateVisit}</td>
+                <td>${listTabel.timeStart}</td>
+                <td>${listTabel.laidDownTime}</td>
+            </tr>
+        </c:forEach>
+    </table>
+
+    <br>
+    <%--Заполняем необходимые поля сущности Work, для внесения новой строки в таблицу--%>
+    <form:form modelAttribute="newWorkDay" action="/typograf_base_war/admin/adminorder/updateinfo/tableinfo/updateWorkDay">
+        <form:hidden path="id"/>
+        Time for start:
+        <form:select path="timeStart">
+            <form:options items="${hours}"/>
+        </form:select>
+        ${clientOrderUpdate.timeForecast}
+        <br>
+        <input type="submit" value="Update">
+    </form:form>
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
